created author demo

--- a/Software Project/1 - Backend/pom.xml
+++ b/Software Project/1 - Backend/pom.xml
@@ -19,7 +19,7 @@
         <relativePath/>
     </parent>
 
-    <groupId>de.dhbw.ase.mangacollector</groupId>
+    <groupId>de.dhbw.ase.de.dhbw.ase.mangacollector</groupId>
     <artifactId>MangaCollector</artifactId>
     <version>1.0-SNAPSHOT</version>
 
