--- a/Software Project/1 - Backend/pom.xml
+++ b/Software Project/1 - Backend/pom.xml
@@ -12,6 +12,10 @@
         <module>4-AbstractionCode</module>
     </modules>
 
+    <groupId>de.dhbw.ase.mangacollector</groupId>
+    <artifactId>MangaCollector</artifactId>
+    <version>1.0-SNAPSHOT</version>
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -19,9 +23,6 @@
         <relativePath/>
     </parent>
 
-    <groupId>de.dhbw.ase.de.dhbw.ase.mangacollector</groupId>
-    <artifactId>MangaCollector</artifactId>
-    <version>1.0-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>16</maven.compiler.source>
